bugfix and add swaggers
