# src/controllers/products.controller.ts
@@ -14,6 +14,18 @@ import { IPaginationQuery } from "../utils/interfaces";
 
 export default {
   async create(req: Request, res: Response) {
+    /**
+    #swagger.tags = ['Product']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+    #swagger.requestBody = {
+      required: true,
+      schema: {
+        $ref: "#/components/schemas/CreateProduct"
+      }
+    }
+    */
     try {
       const result = await create(req.body);
       res.status(201).json({
@@ -29,6 +41,9 @@ export default {
     }
   },
   async findAll(req: Request, res: Response) {
+    /**
+    #swagger.tags = ['Product']
+    */
     try {
       const {
         limit = 10,
@@ -57,6 +72,19 @@ export default {
     }
   },
   async findOne(req: Request, res: Response) {
+    /**
+    #swagger.tags = ['Product']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+    #swagger.parameters['id'] = {
+      in: 'path',
+      description: 'The unique ID of the product to fetch.',
+      required: true,
+      type: 'string',
+      example: '60d21b9667d0d8992e610c85'
+    }
+    */
     try {
       const result = await findOne(req.params?.id);
 
@@ -73,6 +101,12 @@ export default {
     }
   },
   async update(req: Request, res: Response) {
+    /**
+    #swagger.tags = ['Product']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+    */
     try {
       const result = await update(req.params?.id, req.body);
 
@@ -89,6 +123,12 @@ export default {
     }
   },
   async delete(req: Request, res: Response) {
+    /**
+    #swagger.tags = ['Product']
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+    */
     try {
       const result = await remove(req.params?.id);
 
